--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon ./../src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-formidable": "^1.2.0",
+    "express-rate-limit": "^7.2.0",
     "express-validator": "^7.1.0",
     "formidable": "^3.5.1",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
@@ -27,7 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "xss-clean": "^0.1.4"
   },
-  "type": "module"
+  "type": "commonjs"
 }
